--- a/assignment3/css/styles.css
+++ b/assignment3/css/styles.css
@@ -2,67 +2,66 @@
    background-color: lightblue;
    margin: 0 auto;
    width: 90%;
-   max-width:960px;
+   max-width:900px;
    display: grid;
    grid-template-columns:260px 1fr 200px;
 }
 
 .is-current {
-      background-color: black;
-      color: white;
+      background-color: red;
+      color: lightblue;
    }
+
 .headImage{
    grid-column:2/4;
    padding:10px;
 }
 
 nav{
-   grid-column: 2 / 4;
-   color:black;
-
-}
-
-nav ul{
    display: flex;
    justify-content: flex-end;
    list-style:none;
-
+   grid-column: 2 / 4;
+   color: red;
+   padding: 20px;
+   font-size: 25px;
 
 }
 
-h1 {
-   color: goldenrod;
-}
-
-.listOfTThings{
-   display: grid;
-   grid-template-columns:260px 1fr 200px;
-   width: 90%;
-   justify-items: center;
-   align-items: center;
-   padding-top: 20px;
+header{
+   grid-column:1 / 2;
 }
 
 header h1{
    color: red;
+   font-family: "Roboto", sans-serif;
 }
 
-header {
-   color: lightcoral;
-}
-
-nav li{
-   margin-left: 30px;
-   font-family: 'Open Sans Condensed', sans-serif;
-   }
-
-a{
-   color:black;
-   text-decoration:none;
-}
 header{
-   grid-column:1 / 2;
+   grid-column: 1/2;
+   grid-row: 1; 
 }
+
+.intro{
+   color: goldenrod;
+}
+
+
+.strawberry {
+   color: lightcoral;
+   text-align: left;
+}
+
+.lemon{
+   color: #FFF700;
+   text-align: middle;
+}
+
+.apple{
+   color: #2CD01A;
+   text-align: left;
+}
+
 
 main{
    grid-column: 1/4;
@@ -70,24 +69,21 @@ main{
    font-family: 'Open Sans Condensed', sans-serif;
 }
 
+section{
+   column-count: 3;
+}
+
 p {
-   font-family: 'Open Sans Condensed', sans-serif;
+   font-family: 'Montserrat', sans-serif;
 }
 
 footer{
    grid-column: 1 / 2;
-   font-family: 'Anton', sans-serif;
+   font-family: "Roboto", sans-serif;
 
 }
 
-header ul{
-   list-style-type: none;
-}
-
-main a{
-   color: lightcoral;
-}
-
-main ol{
-   list-style-type: none;
+a{
+   color: red;
+   text-decoration:none;
 }
