--- a/assignment3/css/styles.css
+++ b/assignment3/css/styles.css
@@ -15,25 +15,26 @@
 nav{
    display: flex;
    justify-content: flex-end;
-   list-style:none;
+   list-style: none;
    grid-column: 2 / 4;
    grid-row: 1 ;
-   color: goldenrod;
    padding: 25px;
    text-align: center;
    font-size: 15px;
 
 }
 
-header{
-   grid-column:1 / 2;
-}
-
 header h1{
    color: red;
-   font-family: "Roboto", sans-serif;
+   font-family: 'Sniglet', cursive;
+   letter-spacing: 1px;
 }
 
+h2{
+   font-family: 'Sniglet', cursive;
+   font-size: 23px;
+   letter-spacing: 1px;
+}
 header{
    grid-column: 1/2;
    grid-row: 1; 
@@ -41,11 +42,15 @@ header{
 
 .intro{
    color: goldenrod;
+   margin-bottom: 10px;
+   font-family: 'Josefin Sans', sans-serif;
 }
 
 
 .strawberry {
    color: lightcoral;
+ /***  margin-top: 0.5px; */
+   margin-bottom: 5px;
 }
 
 .lemon{
@@ -60,20 +65,22 @@ header{
 
 main{
    grid-column: 1/4;
-   font-family: "Open Sans Condensed", sans-serif;
 }
 
 section{
    column-count: 3;
+   column-gap: 25px;
 }
 
 p {
-   font-family: "Montserrat", sans-serif;
+   font-family: 'Josefin Sans', sans-serif;
+   line-height: 1.9em;
+   text-align: justify;
 }
 
 footer{
-   grid-column: 1 / 2;
-   font-family: "Roboto", sans-serif;
+   grid-column: 1 / 3;
+   font-family: 'Josefin Sans', sans-serif;
    padding-top: 20px;
 }
 
